# MIMIC

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  EXPERIMENTS.md  GPUS.md  README.md  RESULTS.md  analyze_scaling.py  closedloop_debug.py  create_subset.py  dataset.py  diagnose.py  eval.py  features.py  forward_check.py  frame_encoder.py  inference.py  inference_diag.py  inspect_window.py  model.py  parallel.sh  preprocess.py  pyproject.toml  requirements-discord.txt  run_hal.sh  setup.sh  sweep.sh  sweep_arch.sh  sweep_no_opp_inputs.sh  sweep_phase3.sh  sweep_phase5.sh  sweep_scaling.sh  tensorize.py  train.py  upload_dataset.py  weight_check.py
data/: final_destination_falco_vs_falco_2026_03_11t042352z_60c5daf5-p1.parquet
docs/: architecture-diagram.html  architecture-diagram.md  architecture-modern-relpos.html  discord-bot-setup.md  eval-diagnostic-2026-03-17.md  gamecube_input_collapse.md  hal-blog-eric-gu.html  hal-mimic-diff-audit.md  next-agent-prompt.md  ranked-dataset-pipeline.md  research-notes-2026-03-14.md  research-notes-2026-03-15.md  research-notes-2026-03-16.md  research-notes-2026-03-17.md  research-notes-2026-03-18.md  research-notes-2026-03-19.md  research-notes-2026-03-21.md  research-notes-2026-04-02-b.md  research-notes-2026-04-02.md  research-notes-2026-04-05.md  research-notes-2026-04-06.md  research-notes-2026-04-07.md  research-notes-2026-04-08.md  research-notes-2026-04-09.md  research-notes-2026-04-11.md  research-notes-2026-04-11b.md  research-notes-2026-04-11c.md  research-notes-2026-04-12.md  research-notes-2026-04-12b.md  (+11 more)
(+116 files in other folders)
